src/styles/editor.module.css
/* ... */
.mobile-menu {
    z-index: 9999999;
    position: absolute;
    right: 10px;
    top: 70px;
    background-color: var(--primary);
    border: 0.5px solid var(--outline);
    padding: 10px;
    border-radius: 20px;
    box-shadow: 0px 0px 13px 1px rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(10px);
    animation: slidein-from-bottom-special 0.2s ease;
}
.header-button {
    padding: 10px;
    width: 34px;
    height: 34px;
    display: flex;
    justify-content: center;
    align-items: center;
}
.header-button:hover {
    background-color: var(--secondary);
}
.header-button img {
    user-select: none;
    -webkit-user-drag: none;
    -moz-user-select: none;
}
.header.mobile {
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.design-name {
    -webkit-appearance: none;
    appearance: none;
    background-color: var(--primary-background);
    color: var(--text);
    border: none;
    font-size: 13pt;
    font-family: var(--font);
    font-weight: 700;
    padding: 5px;
    border-radius: 10px;
    outline: none;
}
.design-name:hover {
    background-color: var(--secondary);
}
.toolbar {
    position: absolute;
    top: 70px;
    bottom: 15px;
    left: 15px;
    overflow-y: scroll;
    background-color: var(--primary);
    border: 0.5px solid var(--outline);
    padding: 5px;
    display: flex;
    flex-direction: column;
    justify-content: start;
    align-items: center;
    border-radius: 15px;
    box-shadow: 0px 0px 13px 1px rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(5px);
    animation: slidein-from-left 0.3s ease;
}
.toolbar::-webkit-scrollbar {
    display: none;
}
.toolbar-button {
    padding: 5px;
    width: 24px;
    height: 24px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 10px;
}
.toolbar-button.active {
    background-color: var(--theme);
}
.toolbar-button:not(.mobile) {
    margin-bottom: 5px;
}
.toolbar-button:hover {
    background-color: var(--secondary);
}
.toolbar-button img {
    -webkit-user-drag: none;
    width: 18px;
    height: 18px;
}
.inspector {
    position: absolute;
    top: 70px;
    bottom: 15px;
    right: 15px;
    min-width: 16%;
    max-width: 16%;
    overflow-y: hidden;
    background-color: var(--primary);
    border: 0.5px solid var(--outline);
    padding: 15px;
    border-radius: 15px;
    box-shadow: 0px 0px 13px 1px rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(5px);
    animation: slidein-from-left 0.3s ease;
    transition: all 0.3s ease;
}
.inspector.hidden {
    right: -17.5%;  
}
.inspector.hidden:hover {
    right: -14%;  
}
.inspector::-webkit-scrollbar {
    display: none;
}
.inspector-header button {
    -webkit-appearance: none;
    background-color: rgba(0, 0, 0, 0);
    border: none;
    padding: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    border-radius: 10px;
}
.inspector-header button:hover {
    background-color: var(--secondary);
}
.inspector-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.inspector-content {
    height: calc(100% - 85px);
    display: flex;
    overflow-y: scroll;
    overflow-x: hidden;
}
.inspector-content::-webkit-scrollbar {
    display: none !important;
}
.inspector-tabs {
    display: flex;
    gap: 10px;
    align-self: flex-end;
    flex-wrap: nowrap;
    margin-top: 10px;
}
.inspector-nothing {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.inspector-nothing span {
    text-align: center;
    color: #3a3a3a;
    max-width: 80%;
}
.inspector-dynamic-form {
    display: flex;
    flex-direction: column;
    gap: 10px;
    margin-top: 10px;
}
.searchfield-flexbox {
    display: flex;
}
.hierarchy-flexbox {
    display: flex;
    flex: 1;
    flex-direction: column;
}
.hierarchy-textinput {
    -webkit-appearance: none;
    border: none;
    padding: 10px;
    border-radius: 10px;
    display: flex;
    flex: 1;
    width: 100%;
    background-color: var(--secondary);
    color: var(--text);
    font-family: var(--font);
    margin-top: 10px;
    max-height: fit-content;
}
.component-hierarchy-container {
    display: flex;
    flex-direction: column;
    gap: 10px;
    width: 100%;
    margin-top: 10px;
    height: calc(100% - 50px);
    overflow-y: scroll;
}
.component-hierarchy-child {
    background-color: rgba(255, 255, 255, 0.035);
    display: flex;
    flex: 1;
    padding: 10px;
    border-radius: 10px;
    user-select: none;
    align-items: center;
    max-height: fit-content;
    margin-right: 10px;
}
.component-hierarchy-child:hover {
    background-color: var(--secondary);
}
.component-hierarchy-child.fkinselected {
    background-color: var(--theme);
}
.tab-button {
    -webkit-appearance: none;
    border: none;
    padding: 10px;
    border-radius: 10px;
    background-color: var(--primary);
    color: var(--text);
    font-family: var(--font);
}
.tab-button:hover {
    background-color: rgba(255, 255, 255, 0.05);
}
.tab-button.active {
    background-color: var(--secondary);
}
.input-container, .input-group-row {
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.input-container input[type="number"],
.input-container input[type="text"],
.input-group-row input[type="number"] {
    -webkit-appearance: none;
    font-family: var(--font);
    width: 40%;
    border: none;
    padding: 10px;
    background-color: var(--secondary);
    color: var(--text);
    border-radius: 10px;
}
.input-container input[type="number"]:focus,
.input-container input[type="text"]:focus,
.input-group-row input[type="number"]:focus {
    transition: all 0.2s ease;
    outline: 4px solid var(--theme);
}
/* ... */

